# GuardianOS

./: .gitignore  README.md  launch.sh  qemu_guardianos.patch  setup_qemu.sh
build-security_monitor/: .ninja_deps  .ninja_log  CMakeCache.txt  app_b  archive.archive.o.cpio  build.ninja  cmake_install.cmake  gcc.cmake  launch_gdb  qemu-riscv-virt.dtb  qemu-riscv-virt.dts  random_number_generator  security_monitor  simulate
build-security_monitor/elfloader/: archive.archive.o.cpio  cmake_install.cmake  elfloader  linker.lds_pp
build-security_monitor/elfloader/gen_headers/: image_start_addr.h  platform_info.h
build-security_monitor/kernel/: cmake_install.cmake  dts.cmd  gen_header.cmd  kernel.dtb  kernel.dts  kernel.elf  kernel_all_pp_prune_wrapper_temp.c  kernel_compat.txt  linker.lds_pp
build-security_monitor/libsel4/: cmake_install.cmake
build-security_monitor/libsel4pci/: cmake_install.cmake
build-security_monitor/libsel4serial/: cmake_install.cmake
build-security_monitor/musllibc/: cmake_install.cmake
build-security_monitor/musllibc/build-temp/: config.mak  config.makbak  configure_line
build-security_monitor/opensbi/: payload
build-security_monitor/seL4_libs/: cmake_install.cmake
build-security_monitor/seL4_libs/libsel4allocman/: cmake_install.cmake
build-security_monitor/seL4_libs/libsel4bench/: cmake_install.cmake
build-security_monitor/seL4_libs/libsel4debug/: cmake_install.cmake
build-security_monitor/seL4_libs/libsel4muslcsys/: cmake_install.cmake
build-security_monitor/seL4_libs/libsel4platsupport/: cmake_install.cmake
build-security_monitor/seL4_libs/libsel4serialserver/: cmake_install.cmake
build-security_monitor/seL4_libs/libsel4simple/: cmake_install.cmake
build-security_monitor/seL4_libs/libsel4simple-default/: cmake_install.cmake
build-security_monitor/seL4_libs/libsel4sync/: cmake_install.cmake
build-security_monitor/sel4runtime/: cmake_install.cmake
build-security_monitor/util_libs/: cmake_install.cmake
doc/GuardianOS-IEEE/: bib.bib  main.aux  main.bbl  main.bbl-SAVE-ERROR  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex
kernel/: seL4.patch
kernel/src/kernel/: boot.c  (+1 more)
projects/security_monitor/: CMakeLists.txt  README.md  easy-settings.cmake  settings.cmake
projects/security_monitor/libsel4pci/: CMakeLists.txt
projects/security_monitor/libsel4pci/include/sel4pci/: pci_utils.h
projects/security_monitor/libsel4pci/src/: pci_utils.c
projects/security_monitor/libsel4serial/: CMakeLists.txt
projects/security_monitor/src/: app_b.c  random_number_generator.c  security_monitor.c
security_monitor/: easy-settings.cmake  init-build.sh
tools/: README.md
(+125 files in other folders)
